# ocr-lab

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
streamlit_app/: app.py
streamlit_app/config/: providers.yaml
streamlit_app/core/: comparison_engine.py  config_manager.py  metrics_calculator.py  result_normalizer.py
streamlit_app/providers/: base.py  gemini_provider.py  klippa.py  mistral_provider.py  openai_provider.py  taggun.py  veryfi.py
streamlit_app/utils/: receipt_parser.py
